change url homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/DawidBugajski/FakeJustJoin.git",
+  "homepage": "http://DawidBugajski.github.io/FakeJustJoin",
   "name": "fake-just-join",
   "version": "0.1.0",
   "private": true,
