--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "hostname": "http://DawidBugajski.github.io/FakeJustJoin",
   "name": "fake-just-join",
   "version": "0.1.0",
   "private": true,
